# evaluador-de-expresiones-cpp

./: CMakeLists.txt  README.md  constantes.txt
includes/: EvaluadorDeExpresiones.h
src/: EvaluadorDeExpresiones.cpp  main.cpp
tests/: test.cpp
